# railgun

./: .gitignore  Cargo.toml
common/: Cargo.toml  StarRail.proto  build.rs
common/include/resource/: README.txt
common/src/: lib.rs  proto.rs  resource.rs  server_config.rs  time.rs
common/src/packet/: control_panel.rs  hsr.rs  mod.rs
database/: Cargo.toml
database/src/: account.rs  hotfix.rs  lib.rs  srtools.rs
dispatch/: Cargo.toml
dispatch/include/: register.html
dispatch/src/: main.rs
dispatch/src/handler/: dispatch.rs  login.rs  mod.rs  registration.rs  srtools.rs
dispatch/src/util/: auto_hotfix.rs  certs.rs  logging.rs  mod.rs  password.rs  token.rs
