[workspace]
resolver = "3"
members = [ "common", "database","dispatch"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/yuvlian/railgun"

[workspace.dependencies]
actix-cors = "0.7.1"
actix-web = { version = "4.11.0", features = ["openssl"] }
ansi_term = "0.12.1"
bcrypt = "0.17.0"
byteorder = "1.5.0"
common = { path = "common/" }
database = { path = "database/" }
fastrand = "2.3.0"
heck = "0.5.0"
mongodb = { version = "3.2.3", features = ["snappy-compression"] }
openssl = { version = "0.10.73", features = ["vendored"] }
prost = "0.13.5"
prost-build = "0.13.5"
rbase64 = "2.0.3"
reqwest = "0.12.19"
regex = "1.11.1"
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt", "io-util", "io-std", "net", "macros", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
opt-level = 3
strip = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
strip = true
codegen-units = 1
