[package]
name = "common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ansi_term.workspace = true
byteorder.workspace = true
prost.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
heck.workspace = true
prost-build.workspace = true
regex.workspace = true
