[package]
name = "dispatch"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
actix-cors.workspace = true
actix-web.workspace = true
bcrypt.workspace = true
common.workspace = true
database.workspace = true
fastrand.workspace = true
mongodb.workspace = true
openssl.workspace = true
rbase64.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
